Победил ошибки, связанные с gradle